--- a/pom.xml
+++ b/pom.xml
@@ -4,36 +4,36 @@
 
     <groupId>cc.altius</groupId>
     <artifactId>altiusUtilsMaven</artifactId>
-    <version>1.33</version>
+    <version>1.34</version>
     <packaging>jar</packaging>
 
     <name>altiusUtilsMaven</name>
     <url>http://maven.apache.org</url>
-    <distributionManagement>
+    <!--    <distributionManagement>
         <repository>
             <id>repo.s3.maven.altius.cc</id>
             <url>s3://repo.s3.maven.altius.cc/release</url>
         </repository>
-    </distributionManagement>
+    </distributionManagement>-->
     <build>
-        <extensions>
+        <!--        <extensions>
             <extension>
                 <groupId>org.springframework.build</groupId>
                 <artifactId>aws-maven</artifactId>
                 <version>5.0.0.RELEASE</version>
             </extension>
-        </extensions>
+        </extensions>-->
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.5.1</version>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
-            <plugin>
+            <!--            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
                 <version>2.4</version>
@@ -58,7 +58,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
         </plugins>
     </build>
     <properties>
@@ -92,11 +92,29 @@
             <version>2.5</version>
         </dependency>
         <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.10.3</version>
+        </dependency>
+        <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-web-api</artifactId>
             <version>6.0</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
-    
+    <pluginRepositories>
+        <pluginRepository>
+            <id>central</id>
+            <name>Central Repository</name>
+            <url>https://repo.maven.apache.org/maven2</url>
+            <layout>default</layout>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <updatePolicy>never</updatePolicy>
+            </releases>
+        </pluginRepository>
+    </pluginRepositories>
 </project>
