--- a/pom.xml
+++ b/pom.xml
@@ -4,39 +4,39 @@
 
     <groupId>cc.altius</groupId>
     <artifactId>altiusUtilsMaven</artifactId>
-    <version>1.34</version>
+    <version>1.35</version>
     <packaging>jar</packaging>
 
     <name>altiusUtilsMaven</name>
     <url>http://maven.apache.org</url>
-    <!--    <distributionManagement>
+    <distributionManagement>
         <repository>
             <id>repo.s3.maven.altius.cc</id>
             <url>s3://repo.s3.maven.altius.cc/release</url>
         </repository>
-    </distributionManagement>-->
+    </distributionManagement>
     <build>
-        <!--        <extensions>
+        <extensions>
             <extension>
                 <groupId>org.springframework.build</groupId>
                 <artifactId>aws-maven</artifactId>
                 <version>5.0.0.RELEASE</version>
             </extension>
-        </extensions>-->
+        </extensions>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>11</source>
+                    <target>11</target>
                 </configuration>
             </plugin>
-            <!--            <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-source-plugin</artifactId>
-                <version>2.4</version>
+                <version>3.2.1</version>
                 <executions>
                     <execution>
                         <id>attach-sources</id>
@@ -49,7 +49,10 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
-                <version>2.10.4</version>
+                <version>3.2.0</version>
+                <configuration>
+                    <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                </configuration>
                 <executions>
                     <execution>
                         <id>attach-javadocs</id>
@@ -58,7 +61,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>-->
+            </plugin>
         </plugins>
     </build>
     <properties>
